--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .content-area {
     display: flex;
     justify-content: center;
-    padding-top: 84px; /* Space for the fixed header */
+    padding-top: 84px;
     gap: 30px;
 }
 
@@ -54,9 +54,9 @@ aside.sidebar {
     padding: 0 10px;
 }
 
-.logo-container img {
-    height: 35px;
-    margin-top: 5px;
+#instagram-text-logo {
+    height: 29px;
+    width: 103px;
 }
 
 .search-container input {
@@ -80,16 +80,9 @@ aside.sidebar {
 }
 
 .nav-icons .bi {
-    font-size: 1.5rem; /* 24px */
+    font-size: 1.5rem;
     cursor: pointer;
 }
-
-/* .nav-profile-pic {
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    cursor: pointer;
-} */
 
 .post {
     border: 1px solid var(--border-color);
@@ -169,7 +162,7 @@ aside.sidebar {
 .sidebar {
     position: sticky;
     top: 80px;
-    height: calc(100vh - 80px); 
+    height: calc(100vh - 80px);
 }
 
 .sidebar-profile {
@@ -193,7 +186,20 @@ aside.sidebar {
 .profile-text span {
     color: var(--font-color-secondary);
 }
+.stories-container {
+    position: relative;
+}
 
+.stories-container::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    background: linear-gradient(to top, white, rgba(255, 255, 255, 0));
+    pointer-events: none;
+}
 .stories-header {
     display: flex;
     justify-content: space-between;
@@ -212,7 +218,10 @@ aside.sidebar {
     list-style: none;
     margin-top: 16px;
     max-height: 250px;
-    /* overflow-y: scroll; */
+    overflow-y: scroll; 
+}
+.story-list::-webkit-scrollbar {
+    display: none;
 }
 
 .story-item {
@@ -222,15 +231,24 @@ aside.sidebar {
     margin-bottom: 15px;
 }
 
-.story-item img {
-    width: 32px;
-    height: 32px;
+ .story-av {
+    width: 36px;
+    height: 36px;
     border-radius: 50%;
-    border: 2px solid transparent;
-    background: linear-gradient(to right, red, orange) border-box;
-    -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
-    -webkit-mask-composite: xor;
-    mask-composite: exclude;
+    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.story-item img {
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    border: 2px solid white; 
+    position: relative;
+    
 }
 
 .story-item span {
@@ -271,9 +289,10 @@ aside.sidebar {
     flex: 1;
     border: 1px solid var(--border-color);
     border-radius: 3px;
-    padding: 20px;
+    padding: 15px;
     text-align: center;
     position: relative;
+    margin-bottom: 20px;
 }
 
 .suggestion-close {
@@ -314,4 +333,75 @@ aside.sidebar {
     border-radius: 5px;
     cursor: pointer;
     margin-top: 40px;
+}
+
+
+.suggestions {
+    display: none;
+}
+
+@media (min-width: 768px) {
+
+    .suggestions {
+        display: block;
+    }
+}
+
+
+@media (max-width: 767px) {
+    .sidebar {
+        display: none;
+    }
+
+    .header-content {
+        padding: 0 20px;
+    }
+
+    .search-container {
+        display: none;
+    }
+
+    .logo-container {
+        flex-grow: 1;
+    }
+
+    .content-container {
+        padding-top: 60px;
+        max-width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .feed {
+        max-width: 100%;
+    }
+
+    .post,
+    .suggestions {
+        border-radius: 0;
+        border-left: none;
+        border-right: none;
+    }
+}
+
+.logo-container {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.logo-container .bi-instagram {
+    font-size: 1.8rem;
+    margin-top: 2px;
+}
+
+.logo-divider {
+    height: 32px;
+    width: 1px;
+    background-color: #262626;
+}
+
+.logo-container img {
+    height: 33px;
+    margin-top: 5px;
 }
